Fix details panel show and hide on mobile
It didn't work anymore because the page reloaded each time
clicking on a list item.

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -193,6 +193,7 @@
 
 /* END Bulma navbar mobile override */
 
+
 #details .delete {
     display: none;
 }
@@ -207,6 +208,10 @@
         z-index: 40;
         display: none;
         background-color: #fff;
+    }
+
+    #details.is-active {
+        display: block;
     }
 
     #details .delete {
